# coatype

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.cargo-home/: .global-cache
.cargo-home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/g/: gio
.cargo-home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/i/: ico
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: SPEC.md
docs/assets/CoAType.icon/: icon.json
docs/superpowers/plans/: 2026-06-09-overlay-toggle-position.md
docs/superpowers/specs/: 2026-06-09-overlay-toggle-position-design.md
scripts/: release.sh
src/: SettingsPage.tsx  StatusOverlay.tsx  UpdateDialog.tsx  index.css  invoke.ts  languages.ts  main.tsx  overlay.css  settings.css  types.ts  updater.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  focus.rs  lib.rs  main.rs  permissions.rs  pipeline.rs
src-tauri/src/api/: auth.rs  error.rs  mod.rs  whisper.rs
src-tauri/src/audio/: recorder.rs
src-tauri/src/config/: settings.rs
src-tauri/src/dictionary/: io.rs  llm_correct.rs  mod.rs  replace.rs
src-tauri/src/focus/: mod.rs  windows.rs
src-tauri/src/history/: store.rs
src-tauri/src/injector/: macos.rs  mod.rs  windows.rs
src-tauri/src/secrets/: keychain.rs
src-tauri/src/shortcut/: listener.rs
(+87 files in other folders)
