[package]
name = "coatype"
version = "0.1.0"
description = "CoAType - Voice Typing for CyberAgent"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "coatype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
cpal = "0.15"
hound = "3.5"
rdev = "0.5"
enigo = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWindow", "NSWorkspace"] }
objc2-foundation = "0.3"

[dev-dependencies]
mockito = "1"

[features]
default = []

[patch.crates-io]
rdev = { path = "vendor/rdev" }

